[package]
name = "focus-pocus"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
opt-level = 3
lto = "fat"           # Performs maximum global optimizations across all crates
codegen-units = 1     # Optimizes the entire binary as a single unit (reduces size)
strip = true          # Removes ALL symbols and debug info completely
panic = "abort"       # Eliminates the heavy stack-unwinding code
